add Goals, Questions, Notes, & Steps

--- a/TrustworthinessEvaluation.ipynb
+++ b/TrustworthinessEvaluation.ipynb
@@ -109,6 +109,60 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Goals\n",
+    "\n",
+    " 2 or 3 questions, submit to Jess for review\n",
+    " <hr>\n",
+    " Identify problem\n",
+    "\n",
+    "\n",
+    " Tries at least four distinct model types<br>\n",
+    " Selects appropriate model type based on accuracy <br>\n",
+    " Uses for-loops to tune model hyperparameters<br>\n",
+    " https://docs.google.com/document/d/15XaC_QRp7v7GuhIYUe54XdQSGnmcVOjrQgFmVISB4pA/edit\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Questions: \n",
+    "What is the best model for prediction of trustworthiness?<br>\n",
+    "What is the likelihood that a user is trustworthy as opposed to untrustworthy?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "How do the context and trust score correlate? Does a specific context have a higher level of trust or untrust?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Notes: To Review\n",
+    "\n",
+    "- Linear Regression model *\n",
+    "- Decision Tree (?:Maybe)\n",
+    "- Support Vector Machine (SVM)\n",
+    "- Logistic Regression\n",
+    "\n",
+    "#### Steps\n",
+    "1. Split into train and test.\n",
+    "2. Set up and train LRM.\n",
+    "3. Try to test on data. \n",
+    "4. Find accuracy. \n",
+    "\n",
+    "<br>\n",
+    "* Target: Score"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
